Introduce flags and case sensitivity.
This change introduces flags `(?...)` in glob expressions. Flags are
used exclusively to toggle case sensitivity with the `i` flag. Flags
mutate state in the parser and are not emitted as tokens.

`Glob::partitioned` and other APIs now consider the case sensitivity of
literals and the target platform's file system as well as the contents
of literals when constructing a literal path prefix and partitioning a
glob expression. If a literal sequence contains any characters with
casing and any configured case sensitivity that disagrees with the
target platform's file system, then the literal is considered variant.

Globs now default to the case sensitivity of the target platform's file
system.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,6 @@ bstr = "^0.2.0"
 itertools = "^0.10.0"
 nom = "^6.1.0"
 os_str_bytes = "^3.1.0"
-regex = "^1.5.0"
 smallvec = "^1.5.0"
 thiserror = "^1.0.0"
 walkdir = "^2.3.0"
@@ -33,6 +32,15 @@ walkdir = "^2.3.0"
 [dependencies.miette]
 version = "^2.0.0"
 optional = true
+
+[dependencies.regex]
+version = "^1.5.0"
+default-features = false
+features = [
+    "perf",
+    "std",
+    "unicode-case"
+]
 
 [target.'cfg(target_os = "windows")'.dependencies.path-slash]
 version = "^0.1.0"
