--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,10 @@ categories = [
     "filesystem"
 ]
 
+[features]
+default = []
+diagnostics = ["miette"]
+
 [dependencies]
 bstr = "^0.2.0"
 itertools = "^0.10.0"
@@ -25,6 +29,10 @@ regex = "^1.5.0"
 smallvec = "^1.5.0"
 thiserror = "^1.0.0"
 walkdir = "^2.3.0"
+
+[dependencies.miette]
+version = "^2.0.0"
+optional = true
 
 [target.'cfg(target_os = "windows")'.dependencies.path-slash]
 version = "^0.1.0"
