--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -30,6 +30,10 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: clippy
+          args: --all-targets --no-default-features -- -D clippy::all
+      - uses: actions-rs/cargo@v1
+        with:
+          command: clippy
           args: --all-features --all-targets -- -D clippy::all
   test:
     name: Test
