--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,8 @@ thiserror = "^1.0.0"
 walkdir = "^2.3.0"
 
 [dependencies.miette]
-version = "^2.0.0"
+version = "^3.0.0"
+default-features = false
 optional = true
 
 [dependencies.regex]
