--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ diagnostics = ["miette"]
 
 [dependencies]
 bstr = "^0.2.0"
+const_format = "^0.2.0"
 itertools = "^0.10.0"
 nom = "^7.0.0"
 os_str_bytes = "^3.1.0"
@@ -42,9 +43,6 @@ features = [
     "std",
     "unicode-case"
 ]
-
-[target.'cfg(target_os = "windows")'.dependencies.path-slash]
-version = "^0.1.0"
 
 [dev-dependencies]
 build-fs-tree = "^0.3.0"
