--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ authors = ["Sean Olson <olson.sean.k@gmail.com>"]
 description = "Opinionated and portable globs that can be matched against paths and directory trees."
 repository = "https://github.com/olson-sean-k/wax"
 readme = "README.md"
-edition = "2018"
+edition = "2021"
+rust-version = "1.56.0"
 license = "MIT"
 keywords = [
     "glob",
