--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ bstr = "^0.2.0"
 const_format = "^0.2.0"
 itertools = "^0.10.0"
 nom = "^7.0.0"
+nom-supreme = "^0.6.0"
 smallvec = "^1.5.0"
 thiserror = "^1.0.0"
 walkdir = "^2.3.0"
