Expand and improve diagnostic features.
This (very large) change decomposes the `diagnostics` feature into
`diagnostics-inspect` and `diagnostics-report`, with the original
feature becoming a meta-feature that enables them both. Many additional
changes are included to support these diagnostic features.

Parsing now emits `Tokenized`, which encapsulates a glob expression and
its resulting tokens. APIs that operate on token sequences and may
interact with the glob expression (e.g., when emitting errors) now use
this type. `Glob` also uses this type, and so includes the glob
expression text.

This change renames the following:

`Glob::captures` to `Glob::matched`
`Glob::capturing_expression_tokens` to `Glob::captures`
`Captures` to `MatchedText` (with similar renames for related types)
`EncodedPath` to `CandidatePath`

In particular, `Glob::captures` has been replaced with a function
enabled by `diagnostics-inspect` that returns an iterator over
`CapturingToken`s that describe the index and position of captures
within a glob expression. Moreover, `Glob::matched` more obviously pairs
with `Glob::is_match`. A similar nomenclature is used elsewhere,
distinguishing between captures and the matched text that they capture.

This change introduces the `DiagnosticGlob` trait for constructing globs
with complete diagnostics when the `diagnostics-report` feature is
enabled (such that error, warnings, etc. are detected and reported
together as comprehensively as possible). The `Glob::diagnostics`
function has also been added to provide non-error diagnostics after a
glob has been constructed.

Diagnostic codes now begin with a "wax" prefix and any hierarchical
components have been removed (e.g., "rule" in rule errors).

Parse errors now join the start and end spans for displaying errors
from the deepest parse. This tends to be a bit clearer and avoids the
deepest parse location from being truncated when it extends beyond the
source text.

To faciliate the above changes, nuance has

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,29 @@ keywords = [
     "pattern",
     "regex"
 ]
-categories = [
-    "filesystem"
+categories = ["filesystem"]
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = [
+    "--cfg",
+    "docsrs"
 ]
 
 [features]
 default = []
-diagnostics = ["miette"]
+# Enables all diagnostics features. See below.
+diagnostics = [
+    "diagnostics-inspect",
+    "diagnostics-report"
+]
+# Exposes glob metadata through inspection APIs.
+diagnostics-inspect = []
+# Integrates with `miette` and provides `Diagnostic` error types and reporting.
+diagnostics-report = [
+    "miette",
+    "vec1"
+]
 
 [dependencies]
 bstr = "^0.2.0"
@@ -44,6 +60,11 @@ features = [
     "std",
     "unicode-case"
 ]
+
+[dependencies.vec1]
+version = "^1.8.0"
+default-features = false
+optional = true
 
 [dev-dependencies]
 build-fs-tree = "^0.3.0"
