--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ const_format = "^0.2.0"
 itertools = "^0.10.0"
 nom = "^7.0.0"
 nom-supreme = "^0.6.0"
+pori = "=0.0.0"
 smallvec = "^1.5.0"
 thiserror = "^1.0.0"
 walkdir = "^2.3.0"
