--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,6 @@ bstr = "^0.2.0"
 const_format = "^0.2.0"
 itertools = "^0.10.0"
 nom = "^7.0.0"
-nom-supreme = "^0.7.0"
 pori = "=0.0.0"
 smallvec = "^1.5.0"
 thiserror = "^1.0.0"
@@ -52,6 +51,11 @@ walkdir = "^2.3.0"
 version = "^3.0.0"
 default-features = false
 optional = true
+
+[dependencies.nom-supreme]
+version = "^0.7.0"
+default-features = false
+features = ["error"]
 
 [dependencies.regex]
 version = "^1.5.0"
