--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,12 +23,14 @@ rustdoc-args = [
 ]
 
 [features]
-default = []
+default = ["walk"]
 # Integrates with `miette` and provides `Diagnostic` error types and reporting.
 diagnostics = [
     "miette",
     "vec1"
 ]
+# Provides APIs for matching globs against directory trees.
+walk = ["walkdir"]
 
 [dependencies]
 const_format = "^0.2.0"
@@ -37,7 +39,6 @@ nom = "^7.0.0"
 nom-supreme = "^0.8.0"
 pori = "=0.0.0"
 thiserror = "^1.0.0"
-walkdir = "^2.3.0"
 
 [dependencies.miette]
 version = "^4.7.0"
@@ -56,6 +57,10 @@ features = [
 [dependencies.vec1]
 version = "^1.8.0"
 default-features = false
+optional = true
+
+[dependencies.walkdir]
+version = "^2.3.0"
 optional = true
 
 [dev-dependencies]
