--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ default = ["walk"]
 # Integrates with `miette` and provides `Diagnostic` error types and reporting.
 diagnostics = [
     "miette",
-    "vec1"
+    "tardar",
 ]
 # Provides APIs for matching globs against directory trees.
 walk = ["walkdir"]
@@ -41,7 +41,7 @@ pori = "=0.0.0"
 thiserror = "^1.0.0"
 
 [dependencies.miette]
-version = "^4.7.0"
+version = "^5.1.0"
 default-features = false
 optional = true
 
@@ -54,9 +54,8 @@ features = [
     "unicode-case"
 ]
 
-[dependencies.vec1]
-version = "^1.8.0"
-default-features = false
+[dependencies.tardar]
+version = "=0.0.0"
 optional = true
 
 [dependencies.walkdir]
