Unconditionally provide located errors.
This change refactors the `diagnostics` module and its associated
feature such that error locations are unconditionally included in
`BuildError`s. The `diagnostics` feature has been renamed to `miette`
and is only concerned with integration with the `miette` crate and
related libraries; basic diagnostics are always present and exposed via
the `BuildError::locations` function.

Error locations are exposed via `LocatedError` trait objects, which
provide an associated `Span` and a `Display` implementation. This trait
is used to expose error details for parse and rule failures.

As part of this change, the MSRV has been bumped to `1.60.0` to take
advantage of the `dep:` prefix in the Cargo manifest.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "Opinionated and portable globs that can be matched against paths 
 repository = "https://github.com/olson-sean-k/wax"
 readme = "README.md"
 edition = "2021"
-rust-version = "1.56.1"
+rust-version = "1.60.0"
 license = "MIT"
 keywords = [
     "glob",
@@ -25,12 +25,12 @@ rustdoc-args = [
 [features]
 default = ["walk"]
 # Integrates with `miette` and provides `Diagnostic` error types and reporting.
-diagnostics = [
-    "miette",
-    "tardar",
+miette = [
+    "dep:miette",
+    "dep:tardar",
 ]
 # Provides APIs for matching globs against directory trees.
-walk = ["walkdir"]
+walk = ["dep:walkdir"]
 
 [dependencies]
 const_format = "^0.2.0"
