Introduce `FileIterator::not_hidden`.
This change provides the `not_hidden` combinator for discarding
conventionally hidden files on the target platform. On Unix, this
nominally filters out components beginning with `.`. On Windows, this
filters out files and trees with the hidden file attribute. On other
platforms, this combinator does nothing.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,3 +65,11 @@ optional = true
 build-fs-tree = "^0.6.0"
 dunce = "^1.0.0"
 tempfile = "^3.8.0"
+
+[target.'cfg(target_os = "windows")'.dev-dependencies.winapi]
+version = "^0.3.0"
+default-features = false
+features = [
+    "fileapi",
+    "std"
+]
