Integrate with `rstest`.
This change refactors tests with fixtures and cases using `rstest`. This
reports a more complete list of failures (each case is attempted
regardless of the status of other cases) and makes adding cases easier.
The names of tests now generally describe an action, a subject, a
qualifier, and finally an expectation, such as
`new_glob_with_literal_is_ok` and
`walk_path_with_not_excludes_only_matching_paths`. Some of these
components are absent when described by or dependent upon cases.

Assertions and testing functions are exported in `harness` modules,
which can be composed in some tests.

Notably, a bug regarding depth variance is also fixed by this change.
Previously, the depth of patterns using tree wildcards did not consider
adjacent components (because such components do not have accompanying
separators). For example, `a/**/b/**/c` had unbounded depth, but now has
depth in the range [3,] (three or more).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,4 +64,6 @@ optional = true
 [dev-dependencies]
 build-fs-tree = "^0.6.0"
 dunce = "^1.0.0"
+expect_macro = "^0.2.0"
+rstest = "^0.18.0"
 tempfile = "^3.8.0"
