--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,6 @@ miette = [
 walk = ["dep:walkdir"]
 
 [dependencies]
-const_format = "^0.2.0"
 itertools = "^0.11.0"
 nom = "^7.0.0"
 pori = "=0.0.0"
@@ -44,14 +43,19 @@ version = "^5.10.0"
 default-features = false
 optional = true
 
-[dependencies.regex]
-version = "^1.9.0"
+[dependencies.regex-automata]
+version = "^0.4.6"
 default-features = false
 features = [
+    "meta",
     "perf",
     "std",
     "unicode-case"
 ]
+
+[dependencies.regex-syntax]
+version = "^0.8.3"
+default-features = false
 
 [dependencies.tardar]
 version = "^0.1.0"
